--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ SENIOR DEVELOPER
 <div class="row">
 <div class="col-sm-6">
 <strong>Email</strong>
-<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="dab1b6bebdbba8a8b3beb59abdb7bbb3b6f4b9b5b7">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script></div>
+<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="e48f8880838596968d808ba48389858d88ca878b89">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script></div>
 </div>
 <div class="col-sm-6">
 <strong>Phone</strong>
@@ -108,11 +108,13 @@ Twitter
 Senior Developer
 </div>
 <div class="summary">
-<p>He works with the client Santander Bank. He has development Web App Application with J2EE.</p>
+<p>Samtel is a company that provides its services to financial companies, including Santander Bank, ATH, AV Villas Bank and others. Kaled has developed multiple applications for those companies.</p>
 </div>
 <h4>Highlights</h4>
 <ul class="highlights">
-<li class="bullet"> He learned technologies are Postgres, Primefaces, JSF, EJB.</li>
+<li class="bullet">Learned how to operate Postgres in production environments</li>
+<li class="bullet">Improved EJB, JSF, JPA, Glassfish Server</li>
+<li class="bullet">He learned about security concepts and how to apply them to software projects</li>
 <li class="bullet">Project Management</li>
 </ul>
 </div>
@@ -130,14 +132,15 @@ Senior Developer
 Senior Developer
 </div>
 <div class="summary">
-<p>He works build inhouse products for the same company. Also he works the cliente BBVA Bank.</p>
+<p>Kaled started this company with the Project Manager and the Tech Leader of Glokal Consulting. In Essentialtec Kaled helped creating and building some of the company products </p>
 </div>
 <h4>Highlights</h4>
 <ul class="highlights">
-<li class="bullet">Push Notification Backend</li>
-<li class="bullet">Push Notification Android Client</li>
-<li class="bullet">Code QR Read in Android Device</li>
-<li class="bullet">Two Projects with BBVA Bank</li>
+<li class="bullet">Built Push Notification Backend</li>
+<li class="bullet">Added support for push notifications to an Android App.</li>
+<li class="bullet">Implemented a QR Code reader for Android</li>
+<li class="bullet">Provided support for a couple of applications for BBVA.</li>
+<li class="bullet">Technologies: Java, Android, Google App Engine, Google Cloud Messaging</li>
 </ul>
 </div>
 <div class="col-sm-12">
@@ -154,11 +157,13 @@ Senior Developer
 Programmer. Leader Team
 </div>
 <div class="summary">
-<p>He works with the client BBVA Bank. </p>
+<p>Kaled leaded a team for rebuilting the fronted of a corporate application.</p>
 </div>
 <h4>Highlights</h4>
 <ul class="highlights">
-<li class="bullet">He works in the project for change de look and feel of the BBVA Bank Web Site </li>
+<li class="bullet">Leaded a Team of 7 people</li>
+<li class="bullet">Thanks to his good job he was invited to a start a new company with the leader of the company</li>
+<li class="bullet">Technologies: Java, Python, DB2, HTML, CSS</li>
 </ul>
 </div>
 <div class="col-sm-12">
@@ -172,18 +177,18 @@ Programmer. Leader Team
 <a href="https://sensortower.com/android/es/kaled-garrido-fiallo/app/buscar-ruta-transmilenio-bog/com.RutaTransmilenioBogota/">https://sensortower.com/android/es/kaled-garrido-fiallo/app/buscar-ruta-transmilenio-bog/com.RutaTransmilenioBogota/</a>
 </div>
 <div class="position">
-Founder
+Founder and Developer
 </div>
 <div class="summary">
-<p>He created Android App for calculate the best route between the &quot;Station A&quot; and &quot;Station B&quot;, for Bus System to the Bogotá City. </p>
+<p>Kaled created the first and best mobile application for Transmilenio at the time</p>
 </div>
 <h4>Highlights</h4>
 <ul class="highlights">
-<li class="bullet">Kaled Garrido was a founder of this project.</li>
-<li class="bullet">The android App has 40.000 download and 10.000 active user</li>
-<li class="bullet">The Android App was the first App with the route calculator for android device in Bogota</li>
-<li class="bullet">He created the algorithm for calculate the route more optimal for travel from the bus station A to the bus station B, depending on two variables: the time and the date.</li>
-<li class="bullet">In april 2012 Enter.co the magazine more important about technology in Colombia. Wrote a article with a analysis aboute de similar application about transport in Bogota. In this article said &quot;Buscar Ruta Trasmilenio Bog&quot; is more functional than other analyzed App. http://www.enter.co/especiales/universoandroid/no-se-vuelva-a-perder-en-en-transmilenio-con-estas-apps-para-android/</li>
+<li class="bullet">Kaled Garrido was a founder and developer of this project.</li>
+<li class="bullet">The android App had 40.000 downloads and 10.000 active users</li>
+<li class="bullet">It was the first App with the route calculator for an Android device in Bogota</li>
+<li class="bullet">Kaled created the algorithm to calculate the optimal route to travel from a point A to B, based on time and date</li>
+<li class="bullet">In April 2012, Enter.co, the most important tech magazine in Colombia, wrote an article comparing all Transmilenio apps from the time. In the article they said &quot;Buscar Ruta Trasmilenio Bog&quot; is more functional than other analyzed App. http://www.enter.co/especiales/universoandroid/no-se-vuelva-a-perder-en-en-transmilenio-con-estas-apps-para-android/</li>
 <li class="bullet"></li>
 </ul>
 </div>
@@ -198,7 +203,7 @@ Founder
 <div class="row">
 <div class="col-sm-12">
 <h4 class="strike-through">
-<span>NTN 24 Changel</span>
+<span>NTN 24 Channel</span>
 <span class="date">
 2010-04-12 — 2010-04-15
 </span>
@@ -210,7 +215,7 @@ Founder
 volunteer
 </div>
 <div class="summary">
-<p>The news about the weather of the cities in the NTN24 Channel. This information was obtained with a manual operation. The user browsing each link of the 150 cities. This process time was two hour. Kaled Garrido develped a python script for automatize this process in two minute without a human user.</p>
+<p>Kaled Garrido developed a python app to automatize fetching weather data for more than 150 cities. The program produced a report with this information.</p>
 </div>
 </div>
 </div>
@@ -244,7 +249,7 @@ professional
 </span>
 </h4>
 <div class="area">
-System Ingenineer
+System Engineer
 </div>
 <div class="studyType">
 professional
@@ -285,7 +290,7 @@ professional
 <div class="row">
 <div class="col-sm-12">
 <h4 class="strike-through">
-<span>NO SE VUELVA A PERDER EN TRANSMILENIO CON ESTAS APPS PARA ANDROID</span>
+<span>No se vuelva a perder en Transmilenio</span>
 <span class="date">
 2012-04-04
 </span>
@@ -298,7 +303,7 @@ professional
 <strong>ENTER.CO Tech Megazine</strong>
 </div>
 <div class="summary">
-<p></p>
+<p>Article mentioning Kaled&#x27;s app</p>
 </div>
 </div>
 <div class="col-sm-12">
@@ -316,7 +321,7 @@ professional
 <strong>ELESPECTADOR Newspaper</strong>
 </div>
 <div class="summary">
-<p></p>
+<p>Article dedicated to Kaled&#x27;s app</p>
 </div>
 </div>
 <div class="col-sm-12">
@@ -334,7 +339,7 @@ professional
 <strong>BLURADIO Radio Station</strong>
 </div>
 <div class="summary">
-<p></p>
+<p>Live interview with Kaled</p>
 </div>
 </div>
 <div class="col-sm-12">
@@ -352,7 +357,7 @@ professional
 <strong>Soy Digital 2.0 TV Program</strong>
 </div>
 <div class="summary">
-<p></p>
+<p>TV program with Kaled</p>
 </div>
 </div>
 </div>
@@ -372,9 +377,7 @@ professional
 <li>HTML5</li>
 <li>CSS</li>
 <li>Javascript</li>
-<li>Spring MVC</li>
-<li>PHP</li>
-<li>Django</li>
+<li>Bootstrap</li>
 </ul>
 </div>
 <div class="col-sm-6">
@@ -382,8 +385,12 @@ professional
 <h4>Backend</h4>
 </div>
 <ul class="keywords">
-<li>Spring Boot</li>
+<li>Spring Boot (microservices)</li>
+<li>Spring MVC</li>
 <li>J2EE</li>
+<li>Rails (junior)</li>
+<li>Django</li>
+<li>PHP</li>
 </ul>
 </div>
 <div class="col-sm-6">
@@ -412,11 +419,12 @@ professional
 <li>MySQL</li>
 <li>Oracle</li>
 <li>DB2</li>
+<li>SQLite</li>
 </ul>
 </div>
 <div class="col-sm-6">
 <div class="name">
-<h4>SO</h4>
+<h4>OS</h4>
 </div>
 <ul class="keywords">
 <li>Linux Ubuntu</li>
@@ -474,6 +482,8 @@ Native speaker
 </div>
 <ul class="keywords">
 <li>Mountain Bike</li>
+<li>Cars</li>
+<li>Science</li>
 </ul>
 </div>
 </div>
