add go lenguage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ SENIOR DEVELOPER
 <div class="row">
 <div class="col-sm-6">
 <strong>Email</strong>
-<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="e48f8880838596968d808ba48389858d88ca878b89">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script></div>
+<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="84efe8e0e3e5f6f6ede0ebc4e3e9e5ede8aae7ebe9">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script></div>
 </div>
 <div class="col-sm-6">
 <strong>Phone</strong>
@@ -170,7 +170,7 @@ Programmer. Leader Team
 <h4 class="strike-through">
 <span>Buscar Ruta Transmilenio Bog.</span>
 <span class="date">
-2012-02 — 2012-09-16
+2012-02-02 — 2012-09-16
 </span>
 </h4>
 <div class="website pull-right">
@@ -231,7 +231,7 @@ volunteer
 <h4 class="strike-through">
 <span>Universidad de Habana</span>
 <span class="date">
-2007-09-01 — 2009-07
+2007-09-01 — 2009-07-01
 </span>
 </h4>
 <div class="area">
@@ -391,6 +391,7 @@ professional
 <li>Rails (junior)</li>
 <li>Django</li>
 <li>PHP</li>
+<li>Go (Junior)</li>
 </ul>
 </div>
 <div class="col-sm-6">
