--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ SENIOR DEVELOPER
 <div class="row">
 <div class="col-sm-6">
 <strong>Email</strong>
-<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="84efe8e0e3e5f6f6ede0ebc4e3e9e5ede8aae7ebe9">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script></div>
+<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="d0bbbcb4b7b1a2a2b9b4bf90b7bdb1b9bcfeb3bfbd">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script></div>
 </div>
 <div class="col-sm-6">
 <strong>Phone</strong>
@@ -326,7 +326,7 @@ professional
 </div>
 <div class="col-sm-12">
 <h4 class="strike-through">
-<span>No se pierda en Transmilenio: use esta aplicación para llegar a su destino</span>
+<span>No se vuelva a perder en Transmilenio</span>
 <span class="date">
 2013-05-26
 </span>
