new version of about

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ SENIOR DEVELOPER
 <div class="row">
 <div class="col-sm-6">
 <strong>Email</strong>
-<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="d0bbbcb4b7b1a2a2b9b4bf90b7bdb1b9bcfeb3bfbd">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script></div>
+<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="dbb0b7bfbcbaa9a9b2bfb49bbcb6bab2b7f5b8b4b6">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script></div>
 </div>
 <div class="col-sm-6">
 <strong>Phone</strong>
@@ -52,7 +52,7 @@ SENIOR DEVELOPER
 <h3>About</h3>
 </aside>
 <div class="col-sm-9">
-<p>Kaled is a full stack software engineer. He has over 4 years of professional experience, during that time he has participated in different projects from mobile applications to banking and financial sector projects. During his career, Kaled has developed Backend services, websites and Android mobile apps. He has good relationships with his co-workers and he likes to learn and help whenever is possible. In 2012, he created the first Android App with a Route Calculator for Transmilenio, and because of that he was mentioned in several publications and received multiple awards.. Kaled is very passionate, committed and responsible with his work.</p>
+<p>Kaled is a full stack software engineer. He has over 4 years of professional experience, during that time he has participated in different projects from mobile applications to banking and financial sector projects. During his career, Kaled has developed Backend services, websites and Android mobile apps. He likes to learn and help whenever is possible. In 2012, he created the first Android App with a Route Calculator for Transmilenio, and because of that he was mentioned in several publications and received multiple awards.</p>
 </div>
 </section>
 <section id="profiles" class="row">
