--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ SENIOR DEVELOPER
 <div class="row">
 <div class="col-sm-6">
 <strong>Email</strong>
-<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="dbb0b7bfbcbaa9a9b2bfb49bbcb6bab2b7f5b8b4b6">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script></div>
+<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="a4cfc8c0c3c5d6d6cdc0cbe4c3c9c5cdc88ac7cbc9">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script></div>
 </div>
 <div class="col-sm-6">
 <strong>Phone</strong>
@@ -270,13 +270,13 @@ professional
 </h4>
 <div class="date pull-right">
 <em>Awarded</em>
-2015-05-15
 </div>
 <div class="awarder">
 <em>by</em>
 <strong>Oracle</strong>
 </div>
 <div class="summary">
+Link: https://www.youracclaim.com/badges/a4cd7147-131c-4821-8353-6cb72c1fe092/email
 </div>
 </div>
 </div>
